--- a/Quantum_Computing_Library.ipynb
+++ b/Quantum_Computing_Library.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2688JIQHS9g32ejLOOyDf",
+      "authorship_tag": "ABX9TyOAhUst/PrBZBkrfqaY6cNP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Quantum register class"
+        "Defining quantum register class"
       ],
       "metadata": {
         "id": "CgRDUVtfGvaM"
@@ -224,13 +224,13 @@
       "metadata": {
         "id": "dAKX-U8XFALV"
       },
-      "execution_count": 12,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Qubit class"
+        "Defining qubit class"
       ],
       "metadata": {
         "id": "whbaR0RoG3Ft"
@@ -260,13 +260,13 @@
       "metadata": {
         "id": "UUjkhuTkFAIK"
       },
-      "execution_count": 5,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Quantum circuit class"
+        "Defining quantum circuit class"
       ],
       "metadata": {
         "id": "HaPEfckzIfag"
@@ -290,13 +290,13 @@
       "metadata": {
         "id": "-IykvI0gFAGF"
       },
-      "execution_count": 6,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Quantum gate class"
+        "Defining quantum gate class"
       ],
       "metadata": {
         "id": "oV5YxCkYG5un"
@@ -380,13 +380,13 @@
       "metadata": {
         "id": "coT051E4FADO"
       },
-      "execution_count": 7,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Quantum computing stage (a layer in circuit)"
+        "Defining quantum computing stage (a layer in circuit)"
       ],
       "metadata": {
         "id": "rGabCcjiG-Xa"
@@ -408,13 +408,13 @@
       "metadata": {
         "id": "16ef_5d4FAAb"
       },
-      "execution_count": 8,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Elementary quantum gates"
+        "Defining elementary quantum gates"
       ],
       "metadata": {
         "id": "wNwhsw-HHDEm"
@@ -599,8 +599,17 @@
       "metadata": {
         "id": "bGXlUuqnE_9m"
       },
-      "execution_count": 9,
+      "execution_count": 35,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Assigning operations"
+      ],
+      "metadata": {
+        "id": "oqneKd5qJTL4"
+      }
     },
     {
       "cell_type": "code",
@@ -620,8 +629,50 @@
       "metadata": {
         "id": "lED1h3LXE_6I"
       },
-      "execution_count": 16,
+      "execution_count": 25,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Testing"
+      ],
+      "metadata": {
+        "id": "RZUrkkWyJXgv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "circuit = (I ** Hadamard() ** I) * (I ** CNot()) * (CNot(0, 1) ** I)\n",
+        "result = circuit(ket0 ** ket0 ** ket0)\n",
+        "\n",
+        "result.dirac()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "0iww0y5CJYh9",
+        "outputId": "d9c640b1-299d-4734-8603-c90d24bca403"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'+0.707107|000> +0.707107|111>'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     }
   ]
 }
