--- a/Quantum_Computing_Library.ipynb
+++ b/Quantum_Computing_Library.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAhUst/PrBZBkrfqaY6cNP",
+      "authorship_tag": "ABX9TyNN5+OoQbnuj50vu3tskwCK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "CQjVzb7UE8gI"
       },
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "dAKX-U8XFALV"
       },
-      "execution_count": 19,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -260,7 +260,7 @@
       "metadata": {
         "id": "UUjkhuTkFAIK"
       },
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -290,7 +290,7 @@
       "metadata": {
         "id": "-IykvI0gFAGF"
       },
-      "execution_count": 21,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -380,7 +380,7 @@
       "metadata": {
         "id": "coT051E4FADO"
       },
-      "execution_count": 22,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -408,7 +408,7 @@
       "metadata": {
         "id": "16ef_5d4FAAb"
       },
-      "execution_count": 23,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -554,9 +554,17 @@
         "            pass\n",
         "            # raise Exception, 'Not unitary matrix for quantum gate'\n",
         "        self.matrix = m\n",
-        "        self.size = int(math.log(m.shape[0], 2))\n",
-        "\n",
-        "\n",
+        "        self.size = int(math.log(m.shape[0], 2))"
+      ],
+      "metadata": {
+        "id": "bGXlUuqnE_9m"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "class WrongSizeException(Exception):\n",
         "    def __str__(self):\n",
         "        return 'Wrong size of quantum computing object'\n",
@@ -594,12 +602,12 @@
         "def epr(qreg = Ket(0) ** Ket(0)):\n",
         "    \"\"\"Generate an EPR-pair for |00> input state\"\"\"\n",
         "    circ = (Hadamard() ** I) * CNot()\n",
-        "    return circ(qreg)\n"
+        "    return circ(qreg)"
       ],
       "metadata": {
-        "id": "bGXlUuqnE_9m"
+        "id": "I57M3R6lnxGv"
       },
-      "execution_count": 35,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -629,7 +637,7 @@
       "metadata": {
         "id": "lED1h3LXE_6I"
       },
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -645,8 +653,43 @@
       "cell_type": "code",
       "source": [
         "circuit = (I ** Hadamard() ** I) * (I ** CNot()) * (CNot(0, 1) ** I)\n",
-        "result = circuit(ket0 ** ket0 ** ket0)\n",
-        "\n",
+        "result = circuit(ket0 ** ket0 ** ket0)"
+      ],
+      "metadata": {
+        "id": "0iww0y5CJYh9"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jdgs7iyynqcz",
+        "outputId": "f5e9baaf-babc-47b4-8353-8453599aa56b"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<__main__.QRegister at 0x7f86560248b0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "result.dirac()"
       ],
       "metadata": {
@@ -654,10 +697,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "id": "0iww0y5CJYh9",
-        "outputId": "d9c640b1-299d-4734-8603-c90d24bca403"
+        "id": "fHvneI_Znq1T",
+        "outputId": "64bc7a6e-dd43-4c88-e43c-97d44b78d7cd"
       },
-      "execution_count": 34,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -670,7 +713,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 21
         }
       ]
     }
