--- a/Quantum_Computing_Library.ipynb
+++ b/Quantum_Computing_Library.ipynb
@@ -31,7 +31,7 @@
       "source": [
         "##  Quantum Computing Library \n",
         "---\n",
-        "Obtained from https://github.com/rnowotniak/qclib\n"
+        "Obtained from https://github.com/rnowotniak/qclib/blob/master/qclib.py\n"
       ],
       "metadata": {
         "id": "WnDDQpiuGKe6"
